--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prettier": "^2.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-map-gl": "^6.1.15",
     "tailwindcss": "^2.1.2"
   }
 }
