--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-tailwind": "^0.2.1",
     "next": "10.1.3",
+    "next-seo": "^4.24.0",
     "postcss": "^8.2.13",
     "prettier": "^2.2.1",
     "react": "17.0.1",
